<resources>
    <string name="app_name">Homework</string>
    <string name="first_text">First</string>
    <string name="second_text">Second</string>
    <string name="swap_button_text">Swap</string>
    <string name="go_hw1_button">Homework1</string>
    <string name="go_hw2_button">Homework2</string>
    <string name="go_hw3_button">Homework3</string>
    <string name="go_hw4_1_button">Homework4_1</string>
    <string name="five_button">Homework4_2</string>
    <string name="six_button">Homework4_3</string>
    <string name="austria">Austria</string>
    <string name="poland">Poland</string>
    <string name="italy">Italy</string>
    <string name="colombia">Colombia</string>
    <string name="madagascar">Madagascar</string>
    <string name="thailand">Thailand</string>
    <string name="denmark">Denmark</string>
    <string name="hw3_1_name_button">download</string>
    <string name="hw3_default_url">https://assets-cdn.github.com/images/modules/logos_page/Octocat.png</string>
    <string name="hw3_default_url1">https://media.alienwarearena.com/media/1327-a.jpg</string>
    <string name="hw3_edit_text_hint">https://…</string>
    <string name="hw4_text_view_activity_one">Activity one</string>
    <string name="hw4_text_view_activity_two">activity two</string>
    <string name="hw4_button_go_over">Go over</string>
    <string name="hw4_3_button">blink</string>
    <string name="seven_button">Homework5</string>
    <string name="changeStatusWifi">wi-fi</string>
    <string name="eight_button">Homework6</string>
    <string name="hw6_edit_text_hint">search</string>
    <string name="hw6_bottom_search">search</string>
    <string name="hw7_first_fragment">First</string>
    <string name="hw7_second_fragment">Second</string>
    <string name="nine_button">Homework7</string>
    <string name="ten_button">Homework8</string>
    <string name="hw8_fragment">start</string>
    <string name="hw8_timer">TIMER</string>
</resources>
