<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="by.myadel.homework.MainMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/one_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_hw1_button" />

        <Button
            android:id="@+id/two_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_hw2_button" />

        <Button
            android:id="@+id/three_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_hw3_button" />

        <Button
            android:id="@+id/four_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_hw4_1_button" />
        <Button
            android:id="@+id/five_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/five_button" />

        <Button
            android:id="@+id/six_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/six_button" />

        <Button
            android:id="@+id/seven_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seven_button" />

        <Button
            android:id="@+id/eight_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eight_button" />

        <Button
            android:id="@+id/nine_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nine_button" />
    </LinearLayout>
</ScrollView>