<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:ignore="NamespaceTypo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:id="@+id/hw3_image_url_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/black_border"
            android:hint="@string/hw3_edit_text_hint"
            android:inputType="textUri"
            android:padding="5dp" />

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/my_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            fresco:actualImageUri="@string/hw3_default_url1"
            fresco:placeholderImage="@drawable/my_drawable"
            fresco:viewAspectRatio="1"
            fresco:roundAsCircle="true"
            fresco:actualImageScaleType="focusCrop"
            fresco:roundedCornerRadius="10dp" />

        <Button
            android:id="@+id/hw3_download_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:gravity="bottom"
            android:text="@string/hw3_1_name_button" />
    </LinearLayout>
</ScrollView>