<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/austria"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            tools:ignore="SpUsage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:background="@drawable/black_border"
            android:orientation="vertical"
            android:weightSum="90">

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:background="@color/colorRedAustria" />

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30" />

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:background="@color/colorRedAustria" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/poland"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            tools:ignore="SpUsage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:background="@drawable/black_border"
            android:orientation="vertical"
            android:weightSum="100">

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:orientation="horizontal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="@color/colorRedPoland"
                android:orientation="horizontal" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/italy"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            tools:ignore="SpUsage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:background="@drawable/black_border"
            android:orientation="horizontal"
            android:weightSum="90">

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:background="@color/colorGreenItaly" />

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30" />

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:background="@color/colorRedItaly" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/colombia"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            tools:ignore="SpUsage" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:background="@drawable/black_border">

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorRedColombia" />

            <View
                android:layout_width="match_parent"
                android:layout_height="155dp"
                android:background="@color/colorBlueColombia" />

            <View
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:background="@color/colorYellowColombia" />
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/madagascar"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            tools:ignore="SpUsage" />


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:background="@drawable/black_border"
            android:weightSum="100">

            <TableRow
                android:layout_weight="50"
                android:orientation="horizontal"
                android:weightSum="90">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="30" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:background="@color/colorRedMadagascar">

                </View>

                <View
                    android:layout_weight="30"
                    android:background="@color/colorRedMadagascar" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:orientation="horizontal"
                android:weightSum="90">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="30" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:background="@color/colorGreenMadagascar">

                </View>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:background="@color/colorGreenMadagascar" />
            </TableRow>

        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/thailand"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            tools:ignore="SpUsage" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:background="@drawable/black_border">

            <View
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_above="@+id/blue_color_thailand_view"
                android:layout_marginBottom="33dp"
                android:background="@color/colorRedThailand" />

            <View
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_below="@+id/blue_color_thailand_view"
                android:layout_marginTop="33dp"
                android:background="@color/colorRedThailand" />

            <View
                android:id="@+id/blue_color_thailand_view"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_centerInParent="true"
                android:background="@color/colorBlueThailand" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/denmark"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            tools:ignore="SpUsage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:background="@drawable/black_border"
            android:orientation="vertical"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="40"
                android:orientation="horizontal"
                android:weightSum="100">

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:background="@color/colorRedDenmark"
                    tools:ignore="NestedWeights" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="60"
                    android:background="@color/colorRedDenmark" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="40"
                android:orientation="horizontal"
                android:weightSum="100">

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:background="@color/colorRedDenmark"
                    tools:ignore="NestedWeights" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="60"
                    android:background="@color/colorRedDenmark" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>